Correction documentation Auth
