# docs/swagger.json
@@ -19,7 +19,12 @@
     "paths": {
         "/auth/token": {
             "post": {
-                "description": "Request a token for authentication",
+                "security": [
+                    {
+                        "X-User": []
+                    }
+                ],
+                "description": "Request a token for authentication\nTo use the token you need to decrypt it with private key",
                 "consumes": [
                     "application/json"
                 ],
@@ -53,6 +58,14 @@
         },
         "/messages": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    },
+                    {
+                        "X-User": []
+                    }
+                ],
                 "description": "Get a list of all messages",
                 "consumes": [
                     "application/json"
@@ -77,6 +90,14 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    },
+                    {
+                        "X-User": []
+                    }
+                ],
                 "description": "Create a new message with the input payload",
                 "consumes": [
                     "application/json"
@@ -111,6 +132,14 @@
         },
         "/messages/getDiscussions/{userId}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    },
+                    {
+                        "X-User": []
+                    }
+                ],
                 "description": "Return a user list who the user have discussed with",
                 "consumes": [
                     "application/json"
@@ -146,6 +175,14 @@
         },
         "/messages/getMessagesBetween/{userId1}/{userId2}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    },
+                    {
+                        "X-User": []
+                    }
+                ],
                 "description": "get messages between two user",
                 "consumes": [
                     "application/json"
@@ -188,6 +225,14 @@
         },
         "/users": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    },
+                    {
+                        "X-User": []
+                    }
+                ],
                 "description": "Get a list of all users",
                 "consumes": [
                     "application/json"
@@ -246,6 +291,14 @@
         },
         "/users/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    },
+                    {
+                        "X-User": []
+                    }
+                ],
                 "description": "Get a user by ID",
                 "consumes": [
                     "application/json"
@@ -338,6 +391,20 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "description": "Type \"Bearer {token}\" to correctly authenticate.",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
+        },
+        "X-User": {
+            "description": "Type the username to correctly authenticate.",
+            "type": "apiKey",
+            "name": "X-User",
+            "in": "header"
         }
     }
 }
